G3/Ex1/grammar/TableProcessorParser.g4
// --------------------------------
// Bloco 3, Ex. 1
// TableProcessorParser
// Formal and Automated Languages
// Pedro Teixeira, 84715, MIECT
// --------------------------------

parser grammar TableProcessorParser;

options {
	tokenVocab = TableProcessorLexer;
}

@header {
// --------------------------------
// Bloco 3, Ex. 1
// TableProcessorParser
// Formal and Automated Languages
// Pedro Teixeira, 84715, MIECT
// --------------------------------

package grammar;
}

program	: (instr)* EOF;

instr	: (save | assign | read | print | write | join | select | oper);

save	: SAVEALL FILE_NAME;

assign	: ID ARROW table;					// Variable Assignment

read	: READ  C_FILE_NAME;				// Read from file

print	: PRINT table;						// Print to Screen

write 	: WRITE table;						// Write to File

join	: JOIN  table table;				// Join 

select	: SELECT INT FROM table 			// Select Column
		| SELECT ID	 FROM table
		;

oper	: (DIVIDE | MULTIPLY) table table	#OperDivideMultiply
		| (ADD	  | SUBTRACT) table table	#OperAddSubtract
		; 

table	: read								#TableRead
		| join								#TableJoin
		| select							#TableSelect
		| oper								#TableOper
		| ID								#TableVariable
		;
		
		
